--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "git.ignoreLimitWarning": true,
+  "files.associations": {
+    "*.ml": "ocaml",
+    "*.mli": "ocaml",
+    "system_error": "c"
+  }
 }
